<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="price">Price</string>
    <string name="_1" translatable="false">$5</string>
    <string name="order">Order</string>
    <string name="quantity">quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="_" translatable="false">-</string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>
    <!-- Thank You Message fot the order summary [CHAR LIMIT=20} -->
    <string name="thank_you">Thank You!</string>
    <!--
        Name for the order summary. It will be shown in the format of "Name: Amy" is the
        user's name. [CHAR LIMIT=None]
        -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="order_summary_whipped_cream">Add whipped cream?<xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>

    <string name="order_summary_chocolate">Add chocolate?<xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <string name="order_summary_price">Total: <xliff:g id="price" example="$5">%s</xliff:g></string>

    <string name="order_summary_email_subject">Just Java order for<xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="order_summary_quantity"> <xliff:g id="quantity" example="1">%d</xliff:g></string>

    <string name="__" translatable="false">+</string>

    <string name="initial_quality_Value" translatable="false">1</string>

</resources>
